--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "version": "0.1.0",
   "author": "John Verrone <john.verrone@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.9.13",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-emotion": "^4.1.21",
+    "gatsby-plugin-fullstory": "^2.1.20",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-scss-typescript": "^4.0.10",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-source-contentful": "^2.1.84",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.49",
     "gatsby-transformer-sharp": "^2.3.13",
-    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
