--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-source-contentful": "^2.1.84",
     "gatsby-source-filesystem": "^2.1.46",
@@ -25,13 +26,15 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
     "@types/node": "^13.5.3",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
+    "@types/theme-ui": "^0.3.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.0",
     "prettier": "^1.19.1"
