--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "framer-motion": "^1.8.3",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.9.13",
     "gatsby-image": "^2.2.39",
