--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "framer-motion": "^1.8.3",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.9.13",
-    "gatsby-image": "^2.2.39",
+    "gatsby-image": "^2.3.1",
     "gatsby-plugin-emotion": "^4.1.21",
     "gatsby-plugin-fullstory": "^2.1.20",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -22,6 +22,7 @@
     "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-source-contentful": "^2.1.84",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-instagram": "^0.7.0",
     "gatsby-transformer-remark": "^2.6.49",
     "gatsby-transformer-sharp": "^2.3.13",
     "prop-types": "^15.7.2",
