--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,27 @@
 name: ci
 on: [push]
 jobs:
-  make-go-bins:
+  build-and-containerize:
     runs-on: ubuntu-latest
     steps:
-      - name: setup go
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
           go-version: ^1.13
-      - uses: actions/checkout@v2
-      - run: make tiger
+
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Build binaries
+        run: make tiger
+
+      - name: Dockerize
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./etc/docker/Dockerfile
+          push: false
+          tags: jv/tiger:latest
+
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
