--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
           account_key: ${{ secrets.GCLOUD_KEY }}
 
       - name: Publish to Registry
+        if: startsWith(github.ref, 'refs/tags/')
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
           name: verrone-gcp/tiger
