moving k8s deployment to use jv-dev image as well:

--- a/etc/kubernetes/tiger-deployment.yaml
+++ b/etc/kubernetes/tiger-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: tiger
-        image: gcr.io/verrone-gcp/tiger:latest
+        image: gcr.io/jv-dev13/tiger:latest
         ports:
         - containerPort: 8080
