--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "@types/node": "^13.5.3",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/theme-ui": "^0.3.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-react": "^7.18.0",
+    "lodash": "^4.17.21",
     "prettier": "^1.19.1",
     "typescript": "^4.3.4"
   },
