--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.9.2",
     "@types/lodash": "^4.14.170",
     "@types/node": "^13.5.3",
     "@types/react": "^16.9.19",
@@ -24,6 +25,7 @@
     "eslint-plugin-react": "^7.18.0",
     "lodash": "^4.17.21",
     "prettier": "^1.19.1",
+    "react-popper": "^2.2.5",
     "typescript": "^4.3.4"
   },
   "keywords": [
