--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -21,7 +21,8 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/theme-ui": "^0.3.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-plugin-react": "^7.18.0",
     "lodash": "^4.17.21",
     "prettier": "^1.19.1",
