--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "^11.0.1",
     "eslint-plugin-react": "^7.18.0",
     "lodash": "^4.17.21",
+    "next-mdx-remote": "^3.0.2",
     "prettier": "^1.19.1",
     "react-popper": "^2.2.5",
     "typescript": "^4.3.4"
