Date cleanup and full bleed container

--- a/jolly-blog/tsconfig.json
+++ b/jolly-blog/tsconfig.json
@@ -17,7 +17,8 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@images/*": ["public/images/*"],
-      "@lib/*": ["src/lib/*"]
+      "@lib/*": ["src/lib/*"],
+      "@utils/*": ["src/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
