--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "John Verrone <john.verrone@gmail.com>",
   "dependencies": {
+    "@babel/core": "^7.14.8",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
@@ -31,7 +32,7 @@
     "typescript": "^4.3.4"
   },
   "keywords": [
-    "gatsby"
+    "next"
   ],
   "license": "MIT",
   "scripts": {
