--- a/jolly-blog/.eslintrc.json
+++ b/jolly-blog/.eslintrc.json
@@ -1,9 +1,10 @@
 {
   "env": {
+    "node": true,
     "browser": true,
     "es6": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "react-app"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "next"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
