--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -5,52 +5,41 @@
   "version": "0.1.0",
   "author": "John Verrone <john.verrone@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^10.0.27",
-    "framer-motion": "^1.8.3",
-    "gatsby": "^2.19.7",
-    "gatsby-background-image": "^0.9.13",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-emotion": "^4.1.21",
-    "gatsby-plugin-fullstory": "^2.1.20",
-    "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.3",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-plugin-typescript": "^2.1.26",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-source-notion-api": "^0.10.0",
-    "gatsby-transformer-remark": "^2.6.49",
-    "gatsby-transformer-sharp": "^2.3.13",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "theme-ui": "^0.3.1"
+    "@babel/core": "^7.14.8",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@notionhq/client": "^0.2.0",
+    "framer-motion": "^4.1.17",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.9.2",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^13.5.3",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "@types/react-helmet": "^5.0.15",
     "@types/theme-ui": "^0.3.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-plugin-react": "^7.18.0",
-    "prettier": "^1.19.1"
+    "lodash": "^4.17.21",
+    "next-mdx-remote": "^3.0.2",
+    "prettier": "^1.19.1",
+    "react-popper": "^2.2.5",
+    "typescript": "^4.3.4"
   },
   "keywords": [
-    "gatsby"
+    "next"
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build": "next build",
+    "develop": "next dev",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "serve": "next start"
   }
 }
