--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -10,8 +10,10 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@notionhq/client": "^0.2.0",
+    "esbuild": "^0.12.17",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
+    "mdx-bundler": "^5.2.1",
     "next": "^12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -22,12 +24,10 @@
     "@types/node": "^13.5.3",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "@types/theme-ui": "^0.3.0",
     "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-plugin-react": "^7.18.0",
     "lodash": "^4.17.21",
-    "next-mdx-remote": "^3.0.2",
     "prettier": "^1.19.1",
     "react-popper": "^2.2.5",
     "typescript": "^4.3.4"
