--- a/jolly-blog/package.json
+++ b/jolly-blog/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@popperjs/core": "^2.9.2",
     "@types/lodash": "^4.14.170",
     "@types/node": "^13.5.3",
