--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -12,6 +12,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fullstory/browser": "^1.4.9",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
     "next": "^12.0.5",
