--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.10.1",
+    "@types/node": "^17.0.18",
     "@types/react": "17.0.21",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
