--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fullstory/browser": "^1.4.9",
+    "@notionhq/client": "^0.4.13",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
     "next": "^12.0.9",
