--- a/wedding/package.json
+++ b/wedding/package.json
@@ -1,16 +1,20 @@
 {
   "name": "wedding",
-  "version": "0.0.53",
-  "main": "index.js",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "next": "12.1.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-is": "^17.0.2"
+    "framer-motion": "^6.4.3",
+    "next": "^12.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
-    "bun-framework-next": "^12",
     "react-refresh": "0.10.0",
     "typescript": "latest"
   }
