--- a/wedding/package.json
+++ b/wedding/package.json
@@ -11,7 +11,8 @@
     "framer-motion": "^6.4.3",
     "next": "^12.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
