--- a/wedding/package.json
+++ b/wedding/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@xstate/react": "^3.0.0",
     "framer-motion": "^6.4.3",
     "next": "^12.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
