--- a/wedding/package.json
+++ b/wedding/package.json
@@ -11,12 +11,14 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@xstate/react": "^3.0.0",
     "framer-motion": "^6.4.3",
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "xstate": "^4.32.1"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
