--- a/wedding/package.json
+++ b/wedding/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "@xstate/react": "^3.0.0",
     "framer-motion": "^6.4.3",
-    "next": "^12.2.2",
+    "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "xstate": "^4.32.1"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "react-refresh": "0.10.0",
     "typescript": "latest"
