--- a/wedding/package.json
+++ b/wedding/package.json
@@ -8,13 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@trpc/client": "^9.26.2",
+    "@trpc/next": "^9.26.2",
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
     "@xstate/react": "^3.0.0",
     "framer-motion": "^6.4.3",
-    "next": "^12.2.3",
+    "next": "^12.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "xstate": "^4.32.1"
+    "react-query": "^3.39.2",
+    "xstate": "^4.32.1",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
