--- a/wedding/package.json
+++ b/wedding/package.json
@@ -14,7 +14,7 @@
     "@trpc/server": "^9.26.2",
     "@xstate/react": "^3.0.0",
     "framer-motion": "^6.4.3",
-    "next": "^12.2.2",
+    "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "react-refresh": "0.10.0",
     "typescript": "latest"
   }
