--- a/wedding/package.json
+++ b/wedding/package.json
@@ -10,7 +10,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
@@ -29,7 +33,9 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "prisma": "^4.2.1",
     "react-refresh": "0.10.0",
+    "ts-node": "^10.9.1",
     "typescript": "latest"
   }
 }
