--- a/wedding/package.json
+++ b/wedding/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
     "@trpc/react": "^9.26.2",
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.1",
     "eslint-config-next": "^12.3.1",
+    "prisma": "^4.2.1",
     "react-refresh": "0.10.0",
     "ts-node": "^10.9.1",
     "typescript": "latest"
