--- a/wedding/package.json
+++ b/wedding/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "eslint": "^8.23.1",
     "prisma": "^4.2.1",
     "react-refresh": "0.10.0",
     "ts-node": "^10.9.1",
