--- a/wedding/public/manifest.json
+++ b/wedding/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Molly & John Wedding",
   "icons": [
     {
-      "src": "/icon-192.svg",
+      "src": "/s/icon-192.svg",
       "type": "image/svg+xml",
       "sizes": "192x192"
     },
     {
-      "src": "/icon-192.png",
+      "src": "/s/icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/s/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
