--- a/wedding/package.json
+++ b/wedding/package.json
@@ -1,22 +1,35 @@
 {
   "name": "wedding",
   "version": "0.0.1",
+  "engines": {
+    "node": "^14.20.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "teaser": "NEXT_PUBLIC_TEASER_MODE=1 next dev",
+    "vercel-build": "prisma generate && next build"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
+    "@trpc/client": "^9.26.2",
+    "@trpc/next": "^9.26.2",
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
+    "@xstate/react": "^3.0.0",
     "framer-motion": "^6.4.3",
     "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "xstate": "^4.32.1",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
@@ -24,6 +37,7 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.1",
     "eslint-config-next": "^12.3.1",
+    "prisma": "^4.2.1",
     "react-refresh": "0.10.0",
     "ts-node": "^10.9.1",
     "typescript": "latest"
