--- a/wedding/package.json
+++ b/wedding/package.json
@@ -1,6 +1,9 @@
 {
   "name": "wedding",
   "version": "0.0.1",
+  "engines": {
+    "node": "^14.20.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
