--- a/wedding/package.json
+++ b/wedding/package.json
@@ -32,13 +32,16 @@
     "zod": "^3.17.10"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.6",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.1",
     "eslint-config-next": "^13.0.0",
     "prisma": "^4.2.1",
+    "react-popper": "^2.3.0",
     "react-refresh": "0.10.0",
+    "sass": "^1.55.0",
     "ts-node": "^10.9.1",
     "typescript": "latest"
   }
