--- a/wedding/package.json
+++ b/wedding/package.json
@@ -16,6 +16,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@next/font": "^13.0.0",
     "@prisma/client": "^4.2.1",
     "@trpc/client": "^9.26.2",
     "@trpc/next": "^9.26.2",
@@ -36,6 +37,7 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "classnames": "^2.3.2",
     "eslint": "^8.23.1",
     "eslint-config-next": "^13.0.0",
     "prisma": "^4.2.1",
