--- a/wedding/package.json
+++ b/wedding/package.json
@@ -5,7 +5,7 @@
     "node": "^14.20.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "source .env && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
