--- a/wedding/package.json
+++ b/wedding/package.json
@@ -16,6 +16,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@fullstory/browser": "^1.6.2",
     "@next/font": "^13.0.0",
     "@prisma/client": "^4.2.1",
     "@trpc/client": "^9.26.2",
@@ -24,7 +25,7 @@
     "@trpc/server": "^9.26.2",
     "@xstate/react": "^3.0.0",
     "framer-motion": "^6.4.3",
-    "next": "^13.0.0",
+    "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
