--- a/wedding/package.json
+++ b/wedding/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "teaser": "NEXT_PUBLIC_TEASER_MODE=1 next dev",
-    "vercel-build": "prisma generate && next build"
+    "vercel-build": "prisma generate && && prisma migrate deploy && next build"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -39,6 +39,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "eslint": "^8.23.1",
     "eslint-config-next": "^13.0.0",
     "prisma": "^4.2.1",
