--- a/wedding/package.json
+++ b/wedding/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "teaser": "NEXT_PUBLIC_TEASER_MODE=1 next dev",
-    "vercel-build": "prisma generate && && prisma migrate deploy && next build"
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
