--- a/wedding/package.json
+++ b/wedding/package.json
@@ -46,6 +46,7 @@
     "react-popper": "^2.3.0",
     "react-refresh": "0.10.0",
     "sass": "^1.55.0",
+    "swiper": "^8.4.5",
     "ts-node": "^10.9.1",
     "typescript": "latest"
   }
