--- a/wedding/package.json
+++ b/wedding/package.json
@@ -19,17 +19,17 @@
     "@fullstory/browser": "^1.6.2",
     "@next/font": "^13.0.7",
     "@prisma/client": "^4.6.1",
-    "@trpc/client": "^9.26.2",
-    "@trpc/next": "^9.26.2",
-    "@trpc/react": "^9.26.2",
-    "@trpc/server": "^9.26.2",
+    "@trpc/client": "^10.28.1",
+    "@trpc/next": "^10.28.1",
+    "@trpc/react-query": "^10.28.1",
+    "@trpc/server": "^10.28.1",
     "@xstate/react": "^3.0.1",
     "framer-motion": "^6.4.3",
     "next": "^13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "xstate": "^4.35.1",
+    "xstate": "^4.37.2",
     "zod": "^3.17.10"
   },
   "devDependencies": {
