Upgrade to Node 18 (#88)

--- a/wedding/package.json
+++ b/wedding/package.json
@@ -2,7 +2,7 @@
   "name": "wedding",
   "version": "0.0.1",
   "engines": {
-    "node": "^14.20.0"
+    "node": "18.x"
   },
   "scripts": {
     "dev": "source .env && next dev",
@@ -17,19 +17,17 @@
   },
   "dependencies": {
     "@fullstory/browser": "^1.6.2",
-    "@next/font": "^13.0.7",
-    "@prisma/client": "^4.6.1",
-    "@trpc/client": "^9.26.2",
-    "@trpc/next": "^9.26.2",
-    "@trpc/react": "^9.26.2",
-    "@trpc/server": "^9.26.2",
-    "@xstate/react": "^3.0.1",
-    "framer-motion": "^6.4.3",
-    "next": "^13.0.7",
+    "@prisma/client": "^4.15.0",
+    "@trpc/client": "^10.28.1",
+    "@trpc/next": "^10.28.1",
+    "@trpc/server": "^10.28.1",
+    "@xstate/react": "^3.2.2",
+    "framer-motion": "^10.12.16",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
-    "xstate": "^4.35.1",
+    "styled-jsx": "^5.1.2",
+    "xstate": "^4.37.2",
     "zod": "^3.17.10"
   },
   "devDependencies": {
@@ -39,14 +37,13 @@
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "eslint": "^8.23.1",
+    "eslint": "^8.41.0",
     "eslint-config-next": "^13.0.0",
-    "prisma": "^4.6.1",
+    "prisma": "^4.15.0",
     "react-popper": "^2.3.0",
     "react-refresh": "0.10.0",
     "sass": "^1.55.0",
     "swiper": "^8.4.5",
-    "ts-node": "^10.9.1",
     "typescript": "latest"
   }
 }
