--- a/wedding/package.json
+++ b/wedding/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "^10.28.1",
     "@xstate/react": "^3.2.2",
     "framer-motion": "^10.12.16",
+    "line-awesome": "^1.3.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
