--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -16,16 +16,16 @@
     "@notionhq/client": "^1.0.4",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
-    "next": "^12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@popperjs/core": "^2.10.1",
     "@types/node": "^17.0.18",
     "@types/react": "17.0.21",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "^13.4.4",
     "prettier": "^2.4.0",
     "react-popper": "^2.2.5",
     "typescript": "4.4.3"
