--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.10.1",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
+    "@types/webpack-env": "^1.18.1",
     "eslint": "7.32.0",
     "eslint-config-next": "^13.4.4",
     "prettier": "^2.4.0",
