--- a/johnandmolly/package.json
+++ b/johnandmolly/package.json
@@ -17,7 +17,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.1",
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/storage-js": "^2.5.4",
     "@types/mdx": "^2.0.9",
     "@types/node": "latest",
     "@types/react": "latest",
