--- a/johnandmolly/package.json
+++ b/johnandmolly/package.json
@@ -14,10 +14,10 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@google-cloud/storage": "^7.6.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.1",
-    "@supabase/storage-js": "^2.5.4",
     "@types/mdx": "^2.0.9",
     "@types/node": "latest",
     "@types/react": "latest",
