--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -17,9 +17,10 @@
     "@supabase/supabase-js": "^2.24.0",
     "framer-motion": "^10.12.16",
     "gray-matter": "^4.0.3",
-    "next": "^14.0.0",
+    "next": "^14.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@popperjs/core": "^2.10.1",
