--- a/wedding/package.json
+++ b/wedding/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "teaser": "NEXT_PUBLIC_TEASER_MODE=1 next dev"
+    "teaser": "NEXT_PUBLIC_TEASER_MODE=1 next dev",
+    "vercel-build": "prisma generate && next build"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
