--- a/wedding/package.json
+++ b/wedding/package.json
@@ -1,16 +1,13 @@
 {
   "name": "wedding",
   "version": "0.0.1",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
     "dev": "source .env && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "teaser": "NEXT_PUBLIC_TEASER_MODE=1 next dev",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "vercel-build": "prisma generate && next build"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
