--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@iconify-json/fa-solid": "^1.1.8",
+		"@iconify-json/material-symbols": "^1.1.78",
 		"@notionhq/client": "^2.2.15",
 		"@supabase/supabase-js": "^2.42.7",
 		"@sveltejs/adapter-auto": "^3.0.0",
