--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -17,7 +17,7 @@
 		"@notionhq/client": "^2.2.15",
 		"@supabase/supabase-js": "^2.42.7",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.5.7",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -27,7 +27,7 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
+		"svelte": "^5.0.0-next.125",
 		"svelte-check": "^3.6.0",
 		"svelte-outclick": "^3.7.1",
 		"tslib": "^2.4.1",
