--- a/johnandmolly/package.json
+++ b/johnandmolly/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14",
+    "next": "^14.2.5",
     "react": "latest",
     "react-dom": "latest"
   },
