--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -12,30 +12,28 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@iconify-json/fa-solid": "^1.1.8",
-		"@iconify-json/material-symbols": "^1.1.78",
+		"@iconify-json/fa-solid": "^1.2.1",
+		"@iconify-json/material-symbols": "^1.2.12",
 		"@notionhq/client": "^2.2.15",
-		"@supabase/supabase-js": "^2.42.7",
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/kit": "^2.5.7",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@types/eslint": "^8.56.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"eslint": "^8.56.0",
+		"@supabase/supabase-js": "^2.47.10",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.15.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/dom-view-transitions": "^1.0.5",
+		"@types/eslint": "^9.6.1",
+		"@typescript-eslint/eslint-plugin": "^8.19.0",
+		"@typescript-eslint/parser": "^8.19.0",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.125",
-		"svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"unplugin-icons": "^0.18.5",
-		"vite": "^5.0.3"
+		"eslint-plugin-svelte": "^2.46.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.2",
+		"svelte": "^5.16.0",
+		"svelte-check": "^4.1.1",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.2",
+		"unplugin-icons": "^0.22.0",
+		"vite": "^6.0.6"
 	},
-	"type": "module",
-	"dependencies": {
-		"@types/dom-view-transitions": "^1.0.5"
-	}
+	"type": "module"
 }
