move photos to GCP

--- a/johnverrone/package.json
+++ b/johnverrone/package.json
@@ -12,10 +12,10 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@google-cloud/storage": "^7.14.0",
 		"@iconify-json/fa-solid": "^1.2.1",
 		"@iconify-json/material-symbols": "^1.2.12",
 		"@notionhq/client": "^2.2.15",
-		"@supabase/supabase-js": "^2.47.10",
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.15.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
